k8s/clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeserver-service
spec:
  selector:
    app: nodeserver
  type: ClusterIP
  ports:
    - name: nodeserver-service
      port: 80
      targetPort: 3000
      protocol: TCP
