k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
spec:
  ingressClassName: nginx
  rules:
    - host: 'ingress.nodeserver.com.br'
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nodeserver-service
                port:
                  number: 3000
